fix: P4ADEV-1845 fix CVE (#118)